updated inventory, new play

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,10 +1,12 @@
-[prod]
+[login]
 node1.home
 node2.home
-node3.home
 
-[dev]
+[compute]
+node3.home
 node4.home
+
+[storage]
 node5.home
 node6.ubuntu
 
