--- a/site.yml
+++ b/site.yml
@@ -22,11 +22,23 @@
       state: latest
     when: ansible_distribution in ["Rocky", "RedHat"]
 
+
+
   - name: Enable web server and start
     service:
       name: httpd
       enabled: yes
       state: started
+
+  - name: copy web files to server 
+    tags: httpd, copy
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644
+
 
 
 # target compute  servers 
