--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,5 @@
 [login]
 node1.home
-node2.home
 
 [compute]
 node3.home
@@ -8,5 +7,6 @@ node4.home
 
 [storage]
 node5.home
-node6.ubuntu
 
+[workstations]
+node2.home
