sudoers file, ansible.cfg, remove_packages

--- a/remove_packages.yml
+++ b/remove_packages.yml
@@ -9,4 +9,8 @@
         - httpd
         - autofs
         - nfs-utils
+        - terraform
+        - tuned
+        - container-tools
+        - samba
       state: absent
