--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 inventory=./inventory.ini
 roles_path=./roles
 host_key_checking=false
-remote_user = root
+remote_user = hadoga
 
 [privilege_escalation]
 become=true
