new roles, site.yml, inventory

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,11 @@
-[login]
+[web_servers]
 node1.home
 
-[compute]
+[compute_servers]
 node3.home
 node4.home
 
-[storage]
+[storage_servers]
 node5.home
 
 [workstations]
