--- a/host_vars/node5.home.yml
+++ b/host_vars/node5.home.yml
@@ -5,4 +5,4 @@ ssh_users: "student hadoga"
 ssh_template_file: sshd_config_redhat.j2
 tuned_service: tuned
 autofs_service: autofs 
-
+nfs_service: nfs-server 
