--- a/site.yml
+++ b/site.yml
@@ -8,6 +8,7 @@
     dnf: 
       name: "*"
       state: latest
+      security: yes
     when: ansible_distribution in "RedHat,Rocky"
 
   - name: update all Ubuntu packages
