host vars and handlers

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,10 +1,12 @@
 [web_servers]
 node1.home
-node2.home
 
 [storage_servers]
+node2.home
 node3.home
-node4.home
 
 [workstations]
 node5.home
+
+[databases]
+node4.home
