--- a/remove_packages.yml
+++ b/remove_packages.yml
@@ -11,5 +11,8 @@
         - nfs-utils
         - tuned
         - container-tools
+        - vim
         - samba
+        - mariadb
+        - mariadb-server
       state: absent
