--- a/host_vars/node1.home.yml
+++ b/host_vars/node1.home.yml
@@ -5,6 +5,8 @@ ssh_users: "student hadoga"
 ssh_template_file: sshd_config_redhat.j2
 tuned_service: tuned
 autofs_service: autofs 
-nfs_service: nfs-server 
+nfs_service: nfs-server
+db_server: mariadb-server
+db_service: mariadb 
 
 
