--- a/host_vars/node3.home.yml
+++ b/host_vars/node3.home.yml
@@ -6,3 +6,5 @@ ssh_template_file: sshd_config_redhat.j2
 tuned_service: tuned
 autofs_service: autofs 
 nfs_service: nfs-server 
+db_service: mariadb 
+db_server: mariadb-server
