--- a/site-pre-roles.yml
+++ b/site-pre-roles.yml
@@ -8,6 +8,7 @@
     dnf: 
       name: "*"
       state: latest 
+    when: ansible_distribution in "RedHat,Rocky"
   
   - name: Install mariadb
     tags: db
