installed and started chronyd

--- a/inventory.ini
+++ b/inventory.ini
@@ -2,11 +2,10 @@
 node1.home
 
 [storage_servers]
-node2.home
-node3.home
+repo.rhcsa.home
 
 [workstations]
-node5.home
+node1.home
 
 [databases]
-node4.home
+repo.rhcsa.home
