Added Rhel10 servers

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,9 @@
 [web_servers]
-node1.home
+rhelten.home.local
 
 [storage_servers]
-repo.rhcsa.home
+rhel9.home.local
 
 [workstations]
-node1.home
+rhel10.home.local
 
-[databases]
-repo.rhcsa.home
