--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
-inventory=./inventorym1.ini
+inventory=./inventorym1
 roles_path=./roles
 remote_user = hadoga
+
+[privilege_escalation]
 become_method = sudo
