--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,4 +4,7 @@ roles_path=./roles
 remote_user = hadoga
 
 [privilege_escalation]
+become=true
+become_user = root
 become_method = sudo
+become_ask_pass = false 
