--- a/nodeapp.yml
+++ b/nodeapp.yml
@@ -47,7 +47,7 @@
         cmd: /usr/bin/npm install -g forever
       check_mode: false
 
-    - name: Ensure Node.js app forder exists.
+    - name: Ensure Node.js app folder exists.
       ansible.builtin.file:
         path: "{{ node_apps_location}}"
         state: directory
@@ -57,7 +57,7 @@
         src: app
         dest: "{{ node_apps_location }}"
 
-    - name: Install app dependencies defiend in package.json
+    - name: Install app dependencies defined in package.json
       npm:
         path: "{{ node_apps_location }}/app"
 
