--- a/lamp.yml
+++ b/lamp.yml
@@ -1,4 +1,4 @@
----
+
 - hosts: web-stg
   become: true
 
@@ -50,6 +50,13 @@
       ansible.builtin.command: dnf module enable php:remi-8.2 -y
       changed_when: false
 
+    - name: Remove Maria-db
+      ansible.builtin.dnf:
+        name:
+          - mariadb
+          - mariadb-server
+        state: absent
+
     - name: Install Apache, MySQL, PHP, and dependencies
       ansible.builtin.dnf:
         state: present
@@ -59,21 +66,19 @@
           - curl
           - unzip
           - sendmail
-          - apache2
-          - php8.2-common
-          - php8.2-cli
-          - php8.2-dev
-          - php8.2-gd
-          - php8.2-curl
-          - php8.2-opcache
-          - php8.2-xml
-          - php8.2-mbstring
-          - php8.2-pdo
-          - php8.2-mysql
-          - php8.2-apcu
-          - libpcre3-dev
-          - libapache2-mod-php8.2
-          - python3-mysqldb
+          - httpd
+          - php-common
+          - php-cli
+          - php-gd
+          - php-curl
+          - php-opcache
+          - php-xml
+          - php-mbstring
+          - php-pdo
+          - php-mysqlnd
+          - php-pecl-apcu
+          - pcre2-devel
+          - python3-PyMySQL
           - mysql-server
 
     - name: Disable the firewall
@@ -87,7 +92,7 @@
         state: started
         enabled: yes
       with_items:
-        - apache2
+        - httpd
         - mysql
 
 
