--- a/inventorywin.ini
+++ b/inventorywin.ini
@@ -1,13 +1,13 @@
 [web_servers]
 node1.home.local
 
-[storage_servers]
+[storage]
 node2.home.local
 
 [workstations]
 node3.home.local
 node4.home.local
 
-[compute_nodes]
+[compute]
 node5.home.local
 node6.home.local
