--- a/lamp.yml
+++ b/lamp.yml
@@ -78,7 +78,7 @@
       ansible.posix.firewalld:
         service: http
         permanent: true
-        state: enabled
+        state: "{{ firewalld_state }}"
       notify: restart httpd
 
     - name: reload the firewall
